# OtusML

./: .gitignore  README.md
Diploma/: 1.LoadDataset.ipynb  2.2.NER.ipynb  2.LoadDataset.ipynb  Baseline model.pptx  Readme.md  User cases при использовании моделей.pptx  importantWords.csv  shares_dataset.csv  shares_detector_test.csv  shares_detector_train.csv  stopWords.txt  Кастомная категория акций.pptx
HW1/: 1.EDA.ipynb  2.Split dataset to train-test.ipynb  3.Who s the mightiest of them all.ipynb  FeatureSelectionPCA.ipynb  README.md  UMAP.ipynb  UMAPplusKmeans.ipynb  Общее описание.docx
HW10/: 1.EDA_split_train_test.ipynb  2.Modeling.ipynb  README.md  test.csv
HW2/: 1.EDA_Preprocessing.ipynb  2.Modelling_DBSCANtSNE.ipynb  2.Modelling_KMeansUMAP.ipynb  2.Modelling_hierarhicalPCA.ipynb  3.Interpretation.ipynb  README.md  german_credit_data_Descriptives.omv  german_credit_data_Labeled_DBSCAN.csv  german_credit_data_Labeled_DBSCAN.omv  german_credit_data_Labeled_Hierarhical.csv  german_credit_data_Labeled_Hierarhical.omv  german_credit_data_Labeled_KMeans.csv  german_credit_data_Labeled_KMeans.omv  (+2 more)
HW9/: 1.EDA.ipynb  2.Split_train_test.ipynb  3.2.Fine-tune_render_train_data.ipynb  3.3.Fine-tune_train_and_test_fnn.ipynb  3.Modeling.ipynb  3.Modeling_actualyzed20250624.ipynb  Metro_Interstate_Traffic_Volume_interpolated.csv  Metro_Interstate_Traffic_Volume_predicts.csv  Metro_Interstate_Traffic_Volume_test.csv  Metro_Interstate_Traffic_Volume_train.csv  README.md  fnn_train.csv  install_torch_actualyzed20250624.txt  pyproject.toml  pyproject_actualyzed20250624.toml
(+66 files in other folders)
