[project]
name = "ts"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11.0"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "statsmodels (>=0.12,<0.14)",
    "pycodestyle (>=2.12.1,<3.0.0)",
    "pycodestyle-magic (>=0.5,<0.6)",
    "nbqa (>=1.9.1,<2.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "pandas (>=1.1,<2.0)",
    "isort (>=6.0.0,<7.0.0)",
    "scikit-learn (>=0.23,<1.0.3)",
    "etna[chronos] (>=2.10.0,<3.0.0)",
    "pytorch-gpu (>=0.0.1,<0.0.2)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_gpu"}
torchvision = {source = "pytorch_gpu"}
torchaudio = {source = "pytorch_gpu"}
